--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,19 +7,19 @@
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
-        android:name=".Application"
+        android:name=".uIndex"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_uindex"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_uindex_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Launcher">
+        android:theme="@style/Theme.uIndex">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Launcher">
+            android:theme="@style/Theme.uIndex">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
